--- a/app/src/main/res/layout/item_place.xml
+++ b/app/src/main/res/layout/item_place.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -79,11 +80,12 @@
 
             <ImageView
                 android:id="@+id/iconPet"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
                 tools:background="@android:color/black"
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 >
 
             </ImageView>
